--- a/q/263135.html
+++ b/q/263135.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>088</td><td>Zsh</td><td>240728T140459Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274509#274509">Donat</a></td></tr>
-<tr d-ix="1"><td>107</td><td>Bash</td><td>240728T163234Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274515#274515">Donat</a></td></tr>
-<tr d-ix="2"><td>057</td><td>Perl 5</td><td>240722T082434Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274318#274318">Donat</a></td></tr>
-<tr d-ix="3"><td>nan</td><td>R</td><td>240725T145127Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274437#274437">David Jo</a></td></tr>
-<tr d-ix="4"><td>067</td><td>Raku Perl 6 rakudo</td><td>240723T221122Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274375#274375">bb94</a></td></tr>
-<tr d-ix="5"><td>117</td><td>Setanta</td><td>240723T214409Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274373#274373">bb94</a></td></tr>
-<tr d-ix="6"><td>016</td><td>Japt R</td><td>240722T171948Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274332#274332">Shaggy</a></td></tr>
-<tr d-ix="7"><td>065</td><td>Perl 5</td><td>230729T070153Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263490#263490">good old</a></td></tr>
-<tr d-ix="8"><td>045</td><td>J</td><td>230728T083545Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263454#263454">Jonah</a></td></tr>
-<tr d-ix="9"><td>069</td><td>Ruby</td><td>230721T202643Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263157#263157">Value In</a></td></tr>
-<tr d-ix="10"><td>108</td><td>Zsh</td><td>230726T042103Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263347#263347">roblogic</a></td></tr>
-<tr d-ix="11"><td>098</td><td>JavaScript V8</td><td>230725T162055Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263329#263329">Fhuvi</a></td></tr>
+<tr d-ix="0"><td>095</td><td>JavaScript V8</td><td>230725T162055Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263329#263329">Fhuvi</a></td></tr>
+<tr d-ix="1"><td>088</td><td>Zsh</td><td>240728T140459Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274509#274509">Donat</a></td></tr>
+<tr d-ix="2"><td>107</td><td>Bash</td><td>240728T163234Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274515#274515">Donat</a></td></tr>
+<tr d-ix="3"><td>057</td><td>Perl 5</td><td>240722T082434Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274318#274318">Donat</a></td></tr>
+<tr d-ix="4"><td>nan</td><td>R</td><td>240725T145127Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274437#274437">David Jo</a></td></tr>
+<tr d-ix="5"><td>067</td><td>Raku Perl 6 rakudo</td><td>240723T221122Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274375#274375">bb94</a></td></tr>
+<tr d-ix="6"><td>117</td><td>Setanta</td><td>240723T214409Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274373#274373">bb94</a></td></tr>
+<tr d-ix="7"><td>016</td><td>Japt R</td><td>240722T171948Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/274332#274332">Shaggy</a></td></tr>
+<tr d-ix="8"><td>065</td><td>Perl 5</td><td>230729T070153Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263490#263490">good old</a></td></tr>
+<tr d-ix="9"><td>045</td><td>J</td><td>230728T083545Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263454#263454">Jonah</a></td></tr>
+<tr d-ix="10"><td>069</td><td>Ruby</td><td>230721T202643Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263157#263157">Value In</a></td></tr>
+<tr d-ix="11"><td>108</td><td>Zsh</td><td>230726T042103Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263347#263347">roblogic</a></td></tr>
 <tr d-ix="12"><td>012</td><td>Vyxal</td><td>230724T154209Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263263#263263">lynn</a></td></tr>
 <tr d-ix="13"><td>014</td><td>Thunno 2</td><td>230721T163411Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263139#263139">The Thon</a></td></tr>
 <tr d-ix="14"><td>016</td><td>Vyxal</td><td>230721T170041Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263142#263142">The Thon</a></td></tr>
@@ -57,7 +57,23 @@
 <tr d-ix="28"><td>156</td><td>Swift</td><td>230721T175718Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263148#263148">Bbrk24</a></td></tr>
 <tr d-ix="29"><td>278</td><td>Vyxal</td><td>230721T162133Z</td><td><a href="https://codegolf.stackexchange.com/questions/263135/print-this-diamond-gone-beautifully-wrong/263137#263137">The Empt</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 88 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 95 <sup><s>98</s></sup> bytes</h1>
+<blockquote>
+<p>-3 bytes thanks to Donat</p>
+</blockquote>
+<p>I don't know if it's very polite to answer my own challenge, but here it is!</p>
+
+<pre class="lang-javascript prettyprint-override"><code>z=9
+for(z of(s=(n=1,p=&quot;&quot;.padEnd(9-z))=&gt;p+(n&lt;z?n+s(n+1)+n:z)+p)())print(&quot;&quot;.padEnd((5-z)**2)+s())
+</code></pre>
+<p><a href="https://tio.run/##RcsxCsJAEAXQ3lNIqv8zRoggGHG08iCLIRCLybAbUszl13T2733Tlsonz752263W0OEwLRlxXCYUhWl/cm2as6fxbSOGLkh9usAe8TIpMOkpdg@KE6Tn2Vb8A677aNsLd0rW@gM" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
+<hr />
+<p>This is the combined works of <a href="https://codegolf.stackexchange.com/a/263191/116582"><em>Donat</em>'s recent Javascript answer to the challenge &quot;Print this diamond&quot;</a><br>
+and <a href="https://codegolf.stackexchange.com/a/263139/116582"><em>The Thonnu</em>'s formula</a>: <strong>(n−6)(n−5) for the leading spaces (which has become (n−5)**2 since)</strong>.<br>
+<br>
+<a href="https://codegolf.stackexchange.com/users/95987/donat"><em>@Donat</em></a>, don't hesitate if you want to post this as your own answer, this is mostly your work after all :)</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 88 bytes</h1>
 
 <pre class="lang-sh prettyprint-override"><code>for c ({1..9} {8..1}){w=$[(10**c/9)**2]
 printf %$[(5-c)**2]s${w///`printf %$[9-c]s`}\\n}
@@ -65,7 +81,7 @@ printf %$[(5-c)**2]s${w///`printf %$[9-c]s`}\\n}
 <p><a href="https://tio.run/##qyrO@P8/Lb9IIVlBo9pQT8@yVqHaQk/PsFazutxWJVrD0EBLK1nfUlNLyyiWq6AoM68kTUEVKG6qmwwWK1apLtfX109ASFnqJscWJ9TGxOTV/v8PAA" rel="nofollow noreferrer" title="Zsh – Try It Online">Try it online!</a></p>
 <p>Inspired by @roblogic's nice answer.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 107 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 107 bytes</h1>
 
 <pre class="lang-bash prettyprint-override"><code>for c in {1..9} {8..1}
 do printf &quot;%$[(5-c)**2]s&quot;
@@ -75,7 +91,7 @@ done
 <p><a href="https://tio.run/##LcxNCoAgEEDhfacYpKCExgyCBG@SQWW/G4umXXR2k2j/vjf0tHo/7ydY2BzcElE9cNeI8onGHY5zc9cMLImbtMptxnnZEotoGoGRMCmaTHR/FBqV25Y6I8XCtNbByIJzK9Tnws9N3r8" rel="nofollow noreferrer" title="Bash – Try It Online">Try it online!</a></p>
 <p>This has been derived from my answer for zsh.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, <s>64</s> 57 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, <s>64</s> 57 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>say$&quot;x(4-abs)**2 .(1x(9-abs))**2=~s//$&quot;x abs/ger for-8..8
 </code></pre>
@@ -88,7 +104,7 @@ done
 <p><a href="https://tio.run/##K0gtyjH9/18lzzYxqVhHJd5Ww7BCw1JXJU9TU0vLSKdYX19FqUIlTz89Vac4sRLI1lDJ0zUBySnoqcQrpOUX6Vro6Vn8//8vv6AkMz@v@L@ur6megaEBAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 <p>Based on <a href="https://codegolf.stackexchange.com/a/206606/95987">my Perl solution for Print this diamond</a>. After computing the numbers I insert the required spaces using a regex. Indentation is added in the parameter of <code>say</code>.</p>
 </div>
-<div id="pu3" class="pu"><h1>R, <del>123 Bytes</del> 113 bytes</h1>
+<div id="pu4" class="pu"><h1>R, <del>123 Bytes</del> 113 bytes</h1>
 <pre><code>p=paste0;for(i in s&lt;-c(1:9,8:1))message(rep(&quot; &quot;,(i-6)*(i-5)),p(s[c(1:i,i:1-1)],p(rep(&quot; &quot;,abs(i-9)),collapse=&quot;&quot;)))
 </code></pre>
 <p><code>rep(&quot; &quot;,(i-6)*(i-5))</code> gives the trailing white spaces</p>
@@ -96,18 +112,18 @@ done
 <p><code>rep(&quot; &quot;,abs(i-9)</code> gives the number of white space between each character</p>
 <p><a href="https://tio.run/##NcpBCsIwEEbhq4Ss5i8JmIVioz2JuIhlWgaqHTLeP40LN2/x@GprOmmxL59uy15JnHyc3eNMKY/hmhPwZrOyMlVW8s4HknjB0HsGgpI9flaC5BQTnv38YXlZV2NX875tRY0n7wG0dgA" rel="nofollow noreferrer" title="R – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>68</s> 67 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://raku.org" rel="nofollow noreferrer">Raku (Perl 6) (rakudo)</a>, <s>68</s> 67 bytes</h1>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/274318/14109">Donat’s Perl 5 solution</a>.</p>
 <pre class="lang-perl prettyprint-override"><code>say ' 'x(4-.abs)²,(1 x(9-.abs))².subst('',' 'x.abs):g:e for -8..8
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72kKDG7dMEtRmVlheLESgV1BfUKDZX4Q5t0zbVU4rUNjTTrNAwVKjQsdVXiNTUPbdJLzs9N0svKz8zTACkFCqblFynkJhYoqCUmFevoWujpWXBRYpQG2AjNQ7v1gOZhMQkkjGwWiI_FNLAwyDwMF5lAtBzahGFCcWlScYmGuroOzAAdq3Qdq1SEMUtLS9J0LW46Y5qlQ9AsTat0q1QFNKMWQCkoDQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 117 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 117 bytes</h1>
 <pre><code>d:=dearbh@mata le k idir(-8,9){n:=9-d(k)k=[]le i idir(-n+1,n)k+=[n-d(i)]scriobh(&quot; &quot;*(n*n-11*n+30)+nasc@k(&quot; &quot;*(9-n)))}
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDw-5GbCw" rel="nofollow noreferrer">Try it on try-setanta.ie</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, 16 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, 16 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>9
 õÈõ ê q´UçÃû ê
 </code></pre>
@@ -127,20 +143,20 @@ done
                       :Implicit output joined with newlines
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 65 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 65 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>$a=-1-abs,print map/\D|0/?$&quot;:$_,map$a+10+abs()/$a,-20..20for-8..8
 </code></pre>
 <p><a href="https://tio.run/##K0gtyjH9/18l0VbXUDcxqVinoCgzr0QhN7FAP8alxkDfXkXJSiVeB8hXSdQ2NNAGKtHQ1FdJ1NE1MtDTMzJIyy/StdDTs/j//19@QUlmfl7xf90cAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 <p>I'd count it <code>63+1</code> (instead of <code>65</code>), the <code>+1</code> for <code>-E</code> and <code>say</code> instead of <code>print</code>, can't figure out how to get it in TIO which also doesn't add 1 for <code>-l</code> switch. But it beats direct competitors anyway :), it's strange nobody used this strategy.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, 45 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="http://jsoftware.com/" rel="nofollow noreferrer">J</a>, 45 bytes</h1>
 <pre><code>8({.~#-@+41-:@-#)@dlb@(9&amp;-&quot;:1+]-|@i:)@-|@i:@8
 </code></pre>
 <p><a href="https://tio.run/##y/qvpKeepmBrpaCuoKNgoGAFxLp6Cs5BPm7/LTSq9eqUdR20TQx1rRx0lTUdUnKSHDQs1XSVrAy1Y3VrHDKtNB3AlIPFf02u1OSMfIU0dfX/AA" rel="nofollow noreferrer" title="J – Try It Online">Try it online!</a></p>
 <p>Meh.</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>71</s> 69 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>71</s> 69 bytes</h1>
 <p>Function outputting an array of lines. A synthesis of my old answer with <a href="https://codegolf.stackexchange.com/users/15599/level-river-st">Level River St</a>'s <a href="https://codegolf.stackexchange.com/a/263151/52194">answer</a> as per their suggestions.</p>
 <p>-2 bytes by switching to Ruby 2.7+ (TIO is on 2.5.5)</p>
 
@@ -153,25 +169,13 @@ done
 </code></pre>
 <p><a href="https://tio.run/##BcFLDoMgEADQq7ATRphkEjdqsQchLOqHldHGgThN07PT964yf2pN3k3i6cteByBEFAuC63kf@dRkIuhGNaB7J8YYXLYjb5fqaJRH/wxsIQVpKVqOg@JffZfMKuHy2vf6Bw" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu10" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 108 bytes</h1>
+<div id="pu11" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 108 bytes</h1>
 
 <pre class="lang-sh prettyprint-override"><code>for c ({1..9} {8..1}){w=$[(10**c/9)**2];printf \\n%$[(5-c)*(6-c)]s
 for x (${(s::)w})printf %-$[9-$#w/2]s $x}
 </code></pre>
 <p><a href="https://tio.run/##qyrO@P8/Lb9IIVlBo9pQT8@yVqHaQk/PsFazutxWJVrD0EBLK1nfUlNLyyjWuqAoM68kTSEmJk8VKGWqm6yppWEGJGOLuUBGVChoqFRrFFtZaZbXakLVquqqRFvqqiiX6xvFFiuoVNT@/w8A" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Adapted from @Donat's &quot;<a href="https://codegolf.stackexchange.com/a/263045/15940">bash diamond</a>&quot; code and my &quot;<a href="https://codegolf.stackexchange.com/a/216255/15940">spaceship maw</a>&quot; solution.</p>
-</div>
-<div id="pu11" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 98 bytes</h1>
-<p>I don't know if it's very polite to answer my own challenge, but here it is!</p>
-
-<pre class="lang-javascript prettyprint-override"><code>for(z of(z=9,s=(n=1,p=&quot;&quot;.padEnd(9-z))=&gt;n&lt;z?n+p+s(n+1,p)+p+n:z)())print(&quot;&quot;.padEnd((6-z)*(5-z))+s())
-</code></pre>
-<p><a href="https://tio.run/##RcsxDoMwDEbhqyCm3wSQGFoVhMvEQaIiJDoYK4kYfPmQTt3e8L6vv3z8hENTd71y3s8Aq84dxmMbGcJDq1zXvfptlQ1jZ0T8ltkWceoixJWBSspkBCINhyT8AZ5FNHj8XNmJcr4B" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
-<hr />
-<p>This is the combined works of <a href="https://codegolf.stackexchange.com/a/263191/116582"><em>Donat</em>'s recent Javascript answer to the challenge &quot;Print this diamond&quot;</a><br>
-and <a href="https://codegolf.stackexchange.com/a/263139/116582"><em>The Thonnu</em>'s formula</a>: <strong>(n−6)(n−5) for the leading spaces</strong>.<br>
-<br>
-<a href="https://codegolf.stackexchange.com/users/95987/donat"><em>@Donat</em></a>, don't hesitate if you want to post this as your own answer, this is mostly your work after all :)</p>
 </div>
 <div id="pu12" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 12 bytes</h1>
 <pre><code>9ƛɾ9n-Ij;∞øṗ
