--- a/q/26739.html
+++ b/q/26739.html
@@ -26,18 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>000</td><td>C 15</td><td>240731T044900Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/274588#274588">qwr</a></td></tr>
-<tr d-ix="1"><td>nan</td><td></td><td>160402T002944Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/76859#76859">will.fis</a></td></tr>
-<tr d-ix="2"><td>nan</td><td></td><td>160611T135516Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/82680#82680">P_P</a></td></tr>
-<tr d-ix="3"><td>nan</td><td></td><td>150116T133549Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/44614#44614">AlexPnt</a></td></tr>
-<tr d-ix="4"><td>000</td><td>Nimrod ~38</td><td>140507T052351Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/26747#26747">Reimer B</a></td></tr>
-<tr d-ix="5"><td>000</td><td>Nimrod ~2</td><td>140509T165503Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/26866#26866">Reimer B</a></td></tr>
-<tr d-ix="6"><td>nan</td><td></td><td>140507T105421Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/26753#26753">Anna Jok</a></td></tr>
-<tr d-ix="7"><td>000</td><td>Java</td><td>140508T094941Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/26800#26800">Howard</a></td></tr>
-<tr d-ix="8"><td>nan</td><td>Matlab 1464  = 26355867/</td><td>140507T125113Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/26757#26757">Dennis J</a></td></tr>
-<tr d-ix="9"><td>001</td><td>φ2n = 2n −</td><td>140507T150121Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/26761#26761">Ry-</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>Uiua</td><td>240731T093919Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/274595#274595">Europe20</a></td></tr>
+<tr d-ix="1"><td>000</td><td>C 15</td><td>240731T044900Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/274588#274588">qwr</a></td></tr>
+<tr d-ix="2"><td>nan</td><td></td><td>160402T002944Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/76859#76859">will.fis</a></td></tr>
+<tr d-ix="3"><td>nan</td><td></td><td>160611T135516Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/82680#82680">P_P</a></td></tr>
+<tr d-ix="4"><td>nan</td><td></td><td>150116T133549Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/44614#44614">AlexPnt</a></td></tr>
+<tr d-ix="5"><td>000</td><td>Nimrod ~38</td><td>140507T052351Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/26747#26747">Reimer B</a></td></tr>
+<tr d-ix="6"><td>000</td><td>Nimrod ~2</td><td>140509T165503Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/26866#26866">Reimer B</a></td></tr>
+<tr d-ix="7"><td>nan</td><td></td><td>140507T105421Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/26753#26753">Anna Jok</a></td></tr>
+<tr d-ix="8"><td>000</td><td>Java</td><td>140508T094941Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/26800#26800">Howard</a></td></tr>
+<tr d-ix="9"><td>nan</td><td>Matlab 1464  = 26355867/</td><td>140507T125113Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/26757#26757">Dennis J</a></td></tr>
+<tr d-ix="10"><td>001</td><td>φ2n = 2n −</td><td>140507T150121Z</td><td><a href="https://codegolf.stackexchange.com/questions/26739/super-speedy-totient-function/26761#26761">Ry-</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>C: 15,000 = 30,0000,000 / 20,000 (basic sieve)</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 129500 / 13900 ≈ 9.32</h1>
+<pre><code>/×-1°/×
+</code></pre>
+<p><a href="https://www.uiua.org/pad?src=0_12_0-dev_3__4oqZ4peM4o2cbm93KOKJoSgvw5ctMcKwL8OXKSsx4oehMTI5NTAwKQo=" rel="nofollow noreferrer">Try it here!</a></p>
+<p>Gets the prime factors of the number, subtracts 1 from each, and multiplies them.</p>
+</div>
+<div id="pu1" class="pu"><h1>C: 15,000 = 30,0000,000 / 20,000 (basic sieve)</h1>
 <p>This is a decade-old question of mine I forgot I wrote until I found it on google again. Nevertheless, I wanted to post a simple solution that does well and is shorter than my original code. This is a small modification of the Sieve of Eratosthenes to use Euler's product formula that also runs in <span class="math-container">\$O(n \log \log n)\$</span> time.</p>
 <p>For reference, this is the python/pseudocode in 5 lines of computation:</p>
 <pre class="lang-python prettyprint-override"><code>def totient_range(n):
@@ -77,7 +84,7 @@ int main(void)
 }
 </code></pre>
 </div>
-<div id="pu1" class="pu"><p>Here is my Python implementation that seems to be able to crank out ~60000 numbers in 10seconds. I am factorizing numbers using the pollard rho algorithm and using the Rabin miller primality test.</p>
+<div id="pu2" class="pu"><p>Here is my Python implementation that seems to be able to crank out ~60000 numbers in 10seconds. I am factorizing numbers using the pollard rho algorithm and using the Rabin miller primality test.</p>
 <pre class="lang-python prettyprint-override"><code>from Queue import Queue
 import random
 
@@ -151,7 +158,7 @@ if __name__ == '__main__':
   print(s)
 </code></pre>
 </div>
-<div id="pu2" class="pu"><p>
+<div id="pu3" class="pu"><p>
 <strong>C#: 49,000 (980,000,000 / 20,000)</strong></p>
 
 <p><a href="https://codegolf.stackexchange.com/a/26800">https://codegolf.stackexchange.com/a/26800</a> "Howard's code".<br>
@@ -273,7 +280,7 @@ In "App.config" I had to add "gcAllowVeryLargeObjects enabled=true".</p>
     }
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>Python 2.7: 10.999 (165975/15090)</h1>
+<div id="pu4" class="pu"><h1>Python 2.7: 10.999 (165975/15090)</h1>
 
 <h1>Pypy 2.3.1: 28.496 (430000/15090)</h1>
 
@@ -383,7 +390,7 @@ if __name__ == '__main__':
     print "Sum =",s 
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1>Nimrod: ~38,667 (580,000,000/15,000)</h1>
+<div id="pu5" class="pu"><h1>Nimrod: ~38,667 (580,000,000/15,000)</h1>
 
 <p>This answer uses a pretty simple approach. The code employs a simple prime number sieve that stores the prime of the smallest prime power in each slot for composite numbers (zero for primes), then uses dynamic programming to construct the totient function over the same range, then sums the results. The program spends virtually all its time constructing the sieve, then calculates the totient function in a fraction of the time. It looks like it comes down to constructing an efficient sieve (with the slight twist that one also has to be able to extract a prime factor for composite numbers from the result and has to keep memory usage at a reasonable level).</p>
 
@@ -475,7 +482,7 @@ proc main(n: int) =
 main(580_000_000)
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1>Nimrod: ~2,333,333 (42,000,000,000/18,000)</h1>
+<div id="pu6" class="pu"><h1>Nimrod: ~2,333,333 (42,000,000,000/18,000)</h1>
 
 <p>This uses an entirely different approach from my previous answer. See comments for details. The <code>longint</code> module can be found <a href="https://bitbucket.org/behrends/nimlongint">here</a>.</p>
 
@@ -559,7 +566,7 @@ proc ts(n: int128): int128 =
 echo ts(42_000_000_000.toInt128)
 </code></pre>
 </div>
-<div id="pu6" class="pu">
+<div id="pu7" class="pu">
 
 <h1>Python 3: ~24000 (335,000,000 / 14,000)</h1>
 
@@ -618,7 +625,7 @@ if __name__ == "__main__":
     print("{}s".format(s2 - s1))
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h3>Java, score ~24,000 (360,000,000 / 15,000)</h3>
+<div id="pu8" class="pu"><h3>Java, score ~24,000 (360,000,000 / 15,000)</h3>
 <p>The java code below does calculation of the totient function and the prime sieve together. Note that depending on your machine you have to increase the initial/maximum heap size (on my rather slow laptop I had to go up to <code>-Xmx3g -Xms3g</code>).</p>
 <pre class="lang-java prettyprint-override"><code>public class Totient {
 
@@ -654,7 +661,7 @@ if __name__ == "__main__":
 }
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1>Matlab: 1464  = 26355867/ 18000</h1>
+<div id="pu9" class="pu"><h1>Matlab: 1464  = 26355867/ 18000</h1>
 <p>I can't test your code so I divided by 18000 as it represents the fastest computer of those who tested. I came to the score using this property:</p>
 <ul>
 <li>if p is prime, phi(p) = p - 1 (for p &lt; 10^20)</li>
@@ -663,7 +670,7 @@ if __name__ == "__main__":
 <pre><code>sum(primes(500000000)-1)
 </code></pre>
 </div>
-<div id="pu9" class="pu"><p>φ(2<sup>n</sup>) = 2<sup>n &minus; 1</sup><br>
+<div id="pu10" class="pu"><p>φ(2<sup>n</sup>) = 2<sup>n &minus; 1</sup><br>
 &Sigma; φ(2<sup>i</sup>) = 2<sup>i</sup> &minus; 1 for i from 1 to n</p>
 
 <p>First, something to find times:</p>
