--- a/q/245318.html
+++ b/q/245318.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>074</td><td>JavaScript Node.js</td><td>240730T194718Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/274580#274580">Andrew B</a></td></tr>
-<tr d-ix="1"><td>029</td><td>UiuaSBCS+ğ</td><td>240730T163135Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/274578#274578">Europe20</a></td></tr>
+<tr d-ix="0"><td>034</td><td>UiuaSBCS</td><td>240730T163135Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/274578#274578">Europe20</a></td></tr>
+<tr d-ix="1"><td>074</td><td>JavaScript Node.js</td><td>240730T194718Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/274580#274580">Andrew B</a></td></tr>
 <tr d-ix="2"><td>047</td><td>Octave</td><td>221005T003733Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/252590#252590">south</a></td></tr>
 <tr d-ix="3"><td>152</td><td>Python 3</td><td>240415T193410Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/272610#272610">cnln</a></td></tr>
 <tr d-ix="4"><td>110</td><td>JSL JMP Scripting Language</td><td>240415T161444Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/272604#272604">int 21h </a></td></tr>
@@ -113,26 +113,26 @@
 <tr d-ix="84"><td>056</td><td>QBasic</td><td>220319T151557Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/245326#245326">DLosc</a></td></tr>
 <tr d-ix="85"><td>084</td><td>Coding</td><td>220319T144705Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/245323#245323">Razetime</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 76 </s> 74 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, <s>31</s> 34 bytes</h1>
+<pre><code>&amp;ims≡↯78▽26÷255⊟0_87_183 255_215_0
+</code></pre>
+<p><a href="https://www.uiua.org/pad?src=0_12_0-dev_3__Jmltc-KJoeKGrzc44pa9MjbDtzI1NeKKnzBfODdfMTgzIDI1NV8yMTVfMAo=" rel="nofollow noreferrer">Try it here!</a></p>
+<h2>Explanation</h2>
+<pre><code>&amp;ims≡↯78▽26÷255⊟0_87_183 255_215_0
+               ⊟0_87_183 255_215_0 blue and yellow
+           ÷255                     divide each element by 255 so the flag shows correctly
+        ▽26                         repeat each element 26 times
+    ≡↯78                            turn the elements into rows
+&amp;ims                                display image to work on terminals
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 76 </s> 74 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>for(i=o=[];i&lt;2400;i++)o+=i%60?[...'🟦🟨'][i/1200|0]:`
 `;console.log(o)
 </code></pre>
 <p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/Lb9II9M23zY61jrTxsjEwMA6U1tbM1/bNlPVzMA@Wk9PT/3D/PnLgHiFemx0pr6hkYFBjUGsVQJXgnVyfl5xfk6qXk5@uka@5v//AA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p><a href="https://i.sstatic.net/crLPmcgY.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/crLPmcgY.png" alt="flag" /></a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a>+<code>ğ</code></sup>, <s>31</s> <s>34</s> 29 bytes</h1>
-<pre><code>&amp;ims≡↯78▽26÷255-@ &quot; w×&quot;_&quot;ğ÷ &quot;
-</code></pre>
-<p><a href="https://www.uiua.org/pad?src=0_12_0-dev_3__Jmltc-KJoeKGrzc44pa9MjbDtzI1NS1AICIgd8OXIl8ixJ_DtyAiCg==" rel="nofollow noreferrer">Try it here!</a></p>
-<h2>Explanation</h2>
-<pre><code>&amp;ims≡↯78▽26÷255-@ &quot; w×&quot;_&quot;ğ÷ &quot;
-               -@ &quot; w×&quot;_&quot;ğ÷ &quot; blue and yellow
-           ÷255               divide each element by 255 so the flag shows correctly
-        ▽26                   repeat each element 26 times
-    ≡↯78                      turn the elements into rows
-&amp;ims                          display image to work on terminals
-</code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://octave.org/" rel="nofollow noreferrer">Octave</a>, <s>55</s> 47 bytes</h1>
 <pre><code>imagesc([5 5 5;4 4 4],[3,5])
